SEM2/COD7001/LABS/LAB6/cstn6/src/master_tests/invalid/bad_11.lang
var x = 11 var y = 10;